<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/todo_icon"
        android:title="@string/title_todo" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/notes"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings" />

</menu>