<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.proud_indian.pi_todo.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.proud_indian.pi_todo.ui.todo.TodoFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_todo" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.proud_indian.pi_todo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.proud_indian.pi_todo.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.proud_indian.pi_todo.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>